# soyuz

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.lock.license  Cargo.toml  flake.nix
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
